--- a/Lightweight/Objects/Lightweight.build_log.htm
+++ b/Lightweight/Objects/Lightweight.build_log.htm
@@ -28,7 +28,131 @@ Project File Date:  01/20/2024
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
 Note: source file '.\src\Pin\Pin.cpp' - object file renamed from '.\Objects\Pin.o' to '.\Objects\pin_1.o'.
-".\Objects\Lightweight.axf" - 0 Error(s), 0 Warning(s).
+compiling main.cpp...
+.\src\main\project_config.h(17): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\Pin\Pin.h(69): warning:  #1-D: last line of file ends without a newline
+  #endif /* PIN_H_ */
+.\src\main\project_config.h(17): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\usart1\usart1.h(17): warning:  #1-D: last line of file ends without a newline
+  }
+.\src\main\project_config.h(17): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\usart2\usart2.h(17): warning:  #1-D: last line of file ends without a newline
+  }
+.\src\main\project_config.h(17): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\usart3\usart3.h(17): warning:  #1-D: last line of file ends without a newline
+  }
+.\src\main\project_config.h(17): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\usart6\usart6.h(17): warning:  #1-D: last line of file ends without a newline
+  }
+.\src\main\project_config.h(17): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\usable\usable.h(35): warning:  #1-D: last line of file ends without a newline
+  #endif /* USABLE_H_ */
+.\src\main\project_config.h(17): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\adc\adc.h(23): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(17): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\dma\dma.h(15): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(17): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\time_service\time_service.h(13): warning:  #1-D: last line of file ends without a newline
+  }
+.\src\main\project_config.h(17): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\Motor\Motor.h(16): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(17): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\SPI_1\SPI_1.h(34): warning:  #1-D: last line of file ends without a newline
+  }
+.\src\main\project_config.h(17): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\SPI_DOT\SPI_DOT.h(7): warning:  #1-D: last line of file ends without a newline
+  bool SPIAvailable();
+.\src\main\project_config.h(17): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\SPI_DOT\SPI_DOT.h(7): warning:  #1-D: last line of file ends without a newline
+  bool SPIAvailable();
+.\src\main\project_config.h(17): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\main\project_config.h(17): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\SPI_DOT\SPI_DOT.h(7): warning:  #1-D: last line of file ends without a newline
+  bool SPIAvailable();
+.\src\main\project_config.h(17): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\omniplatform\omniplatform.h(16): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(17): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\IMU_USART\IMU_USART.h(36): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(17): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\OpenMV\OpenMV.h(9): warning:  #47-D: incompatible redefinition of macro "RAD2DEG"  (declared at line 6 of ".\src\omniplatform\omniplatform.h")
+  #define RAD2DEG	57.2957795130823208767f
+.\src\OpenMV\OpenMV.h(10): warning:  #47-D: incompatible redefinition of macro "DEG2RAD"  (declared at line 7 of ".\src\omniplatform\omniplatform.h")
+  #define DEG2RAD	0.017453292519943295769f
+.\src\OpenMV\OpenMV.h(36): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(17): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\TSOP\TSOP.h(5): warning:  #47-D: incompatible redefinition of macro "RAD2DEG"  (declared at line 9 of ".\src\OpenMV\OpenMV.h")
+  #define RAD2DEG	57.2957795130823208767
+.\src\TSOP\TSOP.h(6): warning:  #47-D: incompatible redefinition of macro "DEG2RAD"  (declared at line 10 of ".\src\OpenMV\OpenMV.h")
+  #define DEG2RAD	0.01745329251994329576
+.\src\TSOP\TSOP.h(19): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(17): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\I2C\I2C.h(26): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(17): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\IR_Locator\IR_Locator.h(35): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(17): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\main\project_config.h(17): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\Vec2b\Vec2b.h(22): warning:  #1-D: last line of file ends without a newline
+  #endif /* VEC2B_H_ */
+.\src\Queues_ball\Queues_ball.h(67): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(17): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\Processing_coord\Processing_coord.h(18): warning:  #47-D: incompatible redefinition of macro "DIST_BETWEEN_GOALS"  (declared at line 11 of ".\src\OpenMV\OpenMV.h")
+  #define DIST_BETWEEN_GOALS 221
+.\src\Processing_coord\Processing_coord.h(97): warning:  #1-D: last line of file ends without a newline
+  };
+.\src\main\project_config.h(17): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\flash\flash.h(16): warning:  #111-D: statement is unreachable
+    FLASH_Lock();
+.\src\flash\flash.h(17): warning:  #1-D: last line of file ends without a newline
+  }
+.\src\main\libraries.h(28): warning:  #1-D: last line of file ends without a newline
+  #include "usable.h"
+.\src\Robot\Robot.h(255): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  			angToGoal = int16_t(RAD2DEG * atan2(float(y), float(x)));
+.\src\Robot\Robot.h(305): warning:  #1-D: last line of file ends without a newline
+  }
+src\main\main.cpp(19): warning:  #111-D: statement is unreachable
+  	return 0;
+src\main\main.cpp(20): warning:  #1-D: last line of file ends without a newline
+  }
+src\main\main.cpp: 60 warnings, 0 errors
+linking...
+Program Size: Code=40274 RO-data=1426 RW-data=328 ZI-data=14552  
+".\Objects\Lightweight.axf" - 0 Error(s), 60 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -54,12 +178,12 @@ Package Vendor: Keil
    * Component: ARM::CMSIS:CORE:5.6.0
 
    * Component: Keil::Device:Startup:2.6.3
-      Source file:   MDK/Device/Source/ARM/STM32F4xx_OTP.s
-      Include file:  Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f4xx.h
       Source file:   MDK/Device/Source/ARM/STM32F40xxx_41xxx_OPT.s
+      Source file:   MDK/Device/Source/ARM/STM32F4xx_OTP.s
       Source file:   Drivers/CMSIS/Device/ST/STM32F4xx/Source/Templates/arm/startup_stm32f407xx.s
+      Include file:  Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f4xx.h
       Source file:   Drivers/CMSIS/Device/ST/STM32F4xx/Source/Templates/system_stm32f4xx.c
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
